# TQ_CHESS

./: .gitignore  CMakeLists.txt  README.md  chessdetection
.cache/clangd/index/: chessdetection.h.F977ACD280E7AF6A.idx  main.cpp.F45674E47DC6F995.idx
src/: chessdetection.h  main.cpp
